@@ -1,0 +1,20 @@
+package galyleo.shell.magic;
+
+import lombok.NoArgsConstructor;
+
+import static lombok.AccessLevel.PROTECTED;
+
+/**
+ * Abstract base class for {@link jdk.jshell.JShell}
+ * {@link Magic}s.
+ *
+ * @author {@link.uri mailto:ball@hcf.dev Allen D. Ball}
+ * @version $Revision$
+ */
+@NoArgsConstructor(access = PROTECTED)
+public abstract class JShell implements AnnotatedMagic {
+    @Override
+    public void execute(String magic, String code) throws Exception {
+        throw new IllegalArgumentException(magic);
+    }
+}
