@@ -1,5 +1,7 @@
 2021-02-14  Allen D. Ball  <ball@hcf.dev>
 
+	* Added (trivial) Magic implementations for JShell methods.
+
 	* Reload Magic service providers on Shell (re)start.
 
 2021-02-13  Allen D. Ball  <ball@hcf.dev>
